<resources>
    <string name="app_name">Eventsapp</string>
    <string name="error_login">Ocurrio un Error</string>
    <string name="cancel_login">Cancelado</string>
    <string name="facebook.app.id">389258941541659</string>
    <string name="not_close_session">no se cerro sesion</string>
    <string name="title_activity_menu_organizacion">MenuOrganizacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="nombre_del_evento">Nombre del Evento</string>
    <string name="crear_evento">Crear Evento</string>
    <string name="datos_del_evento">Datos del Evento:</string>
    <string name="descripcion_de_evento">Descripcion de Evento</string>
    <string name="solo_mayores_de_18_a_os">Solo mayores de 18 años</string>
    <string name="publico_en_general">Publico en General</string>
    <string name="seleccione_una_categoria">Seleccione una Categoria:</string>
    <string name="restricciones">Restricciones</string>
    <string name="menores_de_edad_acompa_ados_con_adulto">Menores de edad,acompañados con adulto</string>
    <string name="ingrese_contrase_a_nueva">Ingrese contraseña nueva</string>
    <string name="nombre_de_la_entrada">Nombre de la entrada</string>
    <string name="direccion">Direccion</string>
    <string name="banco_afiliado">Banco Afiliado</string>
    <string name="telefono">Telefono</string>
    <string name="eventos_pasados">Eventos Pasados</string>
</resources>
