<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"
    tools:context=".Organizacion.ORG02CrearEventosDatosActivity">

    <Spinner

        android:id="@+id/categoria"
        android:layout_width="140dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTituloCategoria">

    </Spinner>

    <EditText
        android:background="@drawable/borde"
        android:textColorHint="@color/md_white_1000"
        android:id="@+id/nombreEvento"
        android:layout_width="195dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/nombre_del_evento"
        android:inputType=""
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTituloDatosEvento" />

    <TextView
        android:textColor="@color/md_white_1000"
        android:id="@+id/tituloCrearEvento"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Crear Evento"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/md_white_1000"
        android:id="@+id/subTituloDatosEvento"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/datos_del_evento"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloCrearEvento" />

    <TextView
        android:textColor="@color/md_white_1000"
        android:id="@+id/subTituloCategoria"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/seleccione_una_categoria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreEvento" />

    <EditText
        android:background="@drawable/borde"
        android:textColor="@color/md_white_1000"
        android:id="@+id/descripcionEvento"
        android:layout_width="161dp"
        android:layout_height="126dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTituloDescripcionEvento" />

    <TextView
        android:id="@+id/subTituloDescripcionEvento"
        android:layout_width="154dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/descripcion_de_evento"
        android:textColor="@color/md_white_1000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoria" />

    <TextView
        android:id="@+id/subTituloRestricciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/restricciones"
        android:textColor="@color/md_white_1000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcionEvento" />

    <CheckBox
        android:id="@+id/opccion2"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@android:color/background_light"
        android:text="@string/menores_de_edad_acompa_ados_con_adulto"
        android:textColor="@color/md_white_1000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opccion1" />

    <CheckBox
        android:id="@+id/opccion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@android:color/background_light"
        android:text="@string/solo_mayores_de_18_a_os"
        android:textColor="@color/md_white_1000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opccion2" />

    <CheckBox
        android:id="@+id/opccion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@android:color/background_light"
        android:text="@string/publico_en_general"
        android:textColor="@color/md_white_1000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTituloRestricciones" />

    <TextView
        android:id="@+id/subTituloImagen"
        android:layout_width="60dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="Imagen"
        android:textColor="@color/md_white_1000"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/nombreEvento"
        app:layout_constraintTop_toBottomOf="@+id/tituloCrearEvento" />

    <Button
        android:id="@+id/cargar"
        android:layout_width="113dp"
        android:layout_height="35dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/borde"
        android:text="Cargar"
        android:textColor="@color/md_white_1000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="94dp"
        android:layout_height="71dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/subTituloImagen"
        app:srcCompat="@color/com_facebook_button_border_color_focused"
        tools:layout_editor_absoluteX="247dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/subTituloFechyHoraInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="8dp"
        android:text="Fecha y hora de inicio"
        android:textColor="@color/md_white_1000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cargar" />

    <EditText
        android:background="@drawable/borde"
        android:textColorHint="@color/md_white_1000"
        android:id="@+id/horaInicio"
        android:layout_width="71dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fechaInicio"
        app:layout_constraintTop_toBottomOf="@+id/subTituloFechyHoraInicio" />

    <EditText
        android:background="@drawable/borde"
        android:textColorHint="@color/md_white_1000"
        android:id="@+id/fechaInicio"
        android:layout_width="75dp"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@+id/subTituloFechyHoraInicio"
        tools:layout_editor_absoluteX="211dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Fecha y hora de fin"
        android:textColor="@color/md_white_1000"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/fechaInicio"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="211dp" />

    <EditText
        android:background="@drawable/borde"
        android:textColorHint="@color/md_white_1000"
        android:id="@+id/fechaFin"
        android:layout_width="73dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_editor_absoluteX="213dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:background="@drawable/borde"
        android:textColorHint="@color/md_white_1000"
        android:id="@+id/horaFin"
        android:layout_width="72dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fechaFin"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:textColor="@color/md_white_1000"
        android:background="@drawable/borde"
        android:id="@+id/eventoRepite"
        android:layout_width="145dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:text="¿El evento se repite?"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horaFin" />

    <Button
        android:id="@+id/siguiente"
        android:layout_width="125dp"
        android:layout_height="36dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/borde"
        android:text="Siguiente"
        android:textColor="@color/md_white_1000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventoRepite" />

    <Button
        android:id="@+id/cancelar"
        android:layout_width="122dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/borde"
        android:text="Cancelar"
        android:textColor="@color/md_white_1000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siguiente"
        app:layout_constraintVertical_bias="0.083" />

</android.support.constraint.ConstraintLayout>