<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administrador.ADM01RegistrarOrganizacionActivity"
    android:background="@drawable/fondo3">

    <EditText
        android:background="@drawable/borde"
        android:textColorHint="@color/md_white_1000"
        android:id="@+id/etxNomOrg"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:hint="Nombre de la Organizacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloRegistrarOrganizacion"
        tools:ignore="MissingConstraints" />

    <EditText
        android:background="@drawable/borde"
        android:textColorHint="@color/md_white_1000"
        android:id="@+id/etxDniRepre"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="DNI del Representante"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxNumTarj"
        tools:ignore="MissingConstraints" />

    <EditText
        android:background="@drawable/borde"
        android:textColorHint="@color/md_white_1000"
        android:id="@+id/etxNumRUC"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="RUC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxNomOrg"
        tools:ignore="MissingConstraints" />

    <EditText
        android:background="@drawable/borde"
        android:textColorHint="@color/md_white_1000"
        android:id="@+id/etxTel"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/telefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtCorreo"
        tools:ignore="MissingConstraints"
        android:inputType="" />

    <EditText
        android:background="@drawable/borde"
        android:textColorHint="@color/md_white_1000"
        android:id="@+id/etxtCorreo"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/direccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxNumRUC"
        tools:ignore="MissingConstraints"
        android:inputType="" />

    <EditText
        android:background="@drawable/borde"
        android:textColorHint="@color/md_white_1000"
        android:id="@+id/etxBancAfil"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/banco_afiliado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxTel"
        tools:ignore="MissingConstraints"
        android:inputType="" />

    <EditText
        android:background="@drawable/borde"
        android:textColorHint="@color/md_white_1000"
        android:id="@+id/etxNumTarj"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="Numero de Tarjeta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxBancAfil"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tituloRegistrarOrganizacion"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Registrar Organizacion"
        android:textColor="@color/md_white_1000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/md_white_1000"
        android:id="@+id/tituloImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toEndOf="@+id/etxNomOrg"
        tools:layout_editor_absoluteY="79dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:textColorHint="@color/md_white_1000"
        android:id="@+id/imgvFotoOrg"
        android:layout_width="78dp"
        android:layout_height="82dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloImagen"
        app:srcCompat="@color/com_facebook_button_border_color_focused" />

    <Button
        android:background="@drawable/borde"
        android:textColor="@color/md_white_1000"
        android:id="@+id/btnCargar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="28dp"
        android:text="cargar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgvFotoOrg" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/borde"
        android:text="Cancelar"
        android:textColor="@color/md_white_1000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxDniRepre" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/borde"
        android:text="Registrar"
        android:textColor="@color/md_white_1000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toEndOf="@+id/btnCancelar"
        app:layout_constraintTop_toBottomOf="@+id/etxDniRepre" />

</android.support.constraint.ConstraintLayout>